--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "svg",
+	"name": "demo",
 	"version": "1.0.0",
-	"description": "A Vue.js project",
+	"description": "vue2-vuex-vuerouter-webpack-sass-rem",
 	"author": "charleslck",
 	"private": true,
 	"scripts": {
